se termino el C7

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /tpFinal_c5/nbproject/private/
 /tpFinal_c5/build/
 /tpFinal_c5/dist/
+/tpFinal_c7/nbproject/private/
+/tpFinal_c7/build/
+/tpFinal_c7/dist/
