se termino el ejercicio d3

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /tpFinal_d1/nbproject/private/
 /tpFinal_d1/dist/
 /tpFinal_d1/build/
+/tpFinal_d3/nbproject/private/
+/tpFinal_d3/build/
+/tpFinal_d3/dist/
