--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@
 /tpFinal_c8/nbproject/private/
 /tpFinal_c8/dist/
 /tpFinal_c8/build/
+/tpFinal_d4/nbproject/private/
+/tpFinal_d4/dist/
+/tpFinal_d4/build/
